# messydata

./: README.rst  pyproject.toml  tox.ini
messydata/: __init__.py  converters.py  field.py  operators.py  table.py  types_.py  util.py
tests/: conftest.py  test_converters.py  test_field.py  test_messydata.py  test_operator.py  test_table.py  test_util.py
