[tool.poetry]
name = "messydata"
version = "0.1.0"
description = ""
authors = ["Mark Stefanovic <markstefanovic@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
hypothesis = "^3.82"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
